# Manga-Monitor-Drive

./: .replit  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
artifacts/discord-bot/: .pnpmfile.cjs  package.json  tsconfig.json
artifacts/discord-bot/src/: deploy-commands.ts  index.ts
artifacts/discord-bot/src/buttons/: claimButton.ts
artifacts/discord-bot/src/commands/: available.ts  chapter.ts  claim.ts  done.ts  member.ts  mychapters.ts  myprofile.ts  profile.ts  project.ts  salary.ts  setemail.ts  setpayment.ts  stats.ts  track.ts
artifacts/discord-bot/src/database/: schema.ts
artifacts/discord-bot/src/events/: rawTracker.ts
artifacts/discord-bot/src/scrapers/: asuraScraper.ts  baseScraper.ts  flameScraper.ts  genericScraper.ts  luminousScraper.ts  mangadexScraper.ts  newtokiScraper.ts  nirvanaScraper.ts  reaperScraper.ts  scraperManager.ts  vortexScraper.ts
artifacts/discord-bot/src/services/: dashboardService.ts  driveService.ts  salaryService.ts
artifacts/discord-bot/src/utils/: config.ts  paymentList.ts
artifacts/manhwa-tracker/: database.py  downloader.py  drive_upload.py  main.py  requirements.txt  scraper.py  tracker.db
attached_assets/: Pasted--Claim-offer--1773662492825_1773662492827.txt  Pasted-PAYMENT-How-Many-Chapters-Have-You-Worked-On-Series-Nam_1773662653369.txt  Pasted-You-are-a-senior-software-engineer-and-Discord-bot-arch_1773662494970.txt  Pasted-more-more249-Invisible-more-4-2-2026-6-16-PM-Kirose-4-2_1775587097292.txt
